[gd_scene load_steps=4 format=3 uid="uid://c78tlamhdk2i5"]

[ext_resource type="Script" uid="uid://cb67ipu3g1jud" path="res://Script/Marble/draggable_marble.gd" id="1_2kclj"]
[ext_resource type="PackedScene" uid="uid://cymonoxf3tu0a" path="res://Scenes/Marble/physics_marble.tscn" id="2_bqmk8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_glsp8"]
radius = 14.142136

[node name="DraggableMarble" type="Node2D"]
script = ExtResource("1_2kclj")

[node name="PhysicsMarble" parent="." instance=ExtResource("2_bqmk8")]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_glsp8")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
